--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://Markov41.github.io" # the base hostname & protocol for your site
+url: "http://kplpf.xyz" # the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
@@ -45,7 +45,7 @@ theme_settings:
   katex: true # Enable if using math markup
 
   # Localization strings
-  str_follow_on: "Follow on"
+  str_follow_on:
   str_rss_follow: "Follow RSS feed"
   str_email: "Email"
   str_next: "Next"
